arrow2_convert/tests/ui/struct_no_fields.stderr
error: Expected struct to have more than one field
 --> tests/ui/struct_no_fields.rs:4:8
  |
4 | struct S {}
  |        ^
