arrow2_convert/tests/ui/struct_no_fields.rs
use arrow2_convert::ArrowField;

#[derive(ArrowField)]
struct S {}

fn main() 
{}